crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__expression_unary_operand.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let x = !
---
alder::syntax

  × this unary operator is missing its operand at the end of the file
   ╭─[/project/src/main.ald:1:10]
 1 │ let x = !
   · ┬
   · ╰── this binding starts here
   ╰────
