crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__impl_argument_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "impl Show[User User] {}"
---
alder::syntax

  × I was expecting `,` or `]` after this trait argument
   ╭─[/project/src/main.ald:1:16]
 1 │ impl Show[User User] {}
   ·          ┬     ┬
   ·          │     ╰── expected `,` or `]`
   ·          ╰── this `[` opens here
   ╰────
