crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__impl_assoc_body.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "impl Iterator[Foo] { type Item = 1 }"
---
alder::syntax

  × I was expecting a type
   ╭─[/project/src/main.ald:1:34]
 1 │ impl Iterator[Foo] { type Item = 1 }
   · ┬                                ┬
   · │                                ╰── expected a type here
   · ╰── this impl declaration starts here
   ╰────
  help: types include names like `Number`, applications like `Array[Number]`,
        and type variables like `a`
