crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__impl_assoc_name.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "impl Iterator[Foo] { type item = Number }"
---
alder::syntax

  × I was expecting an associated type name after `type`
   ╭─[/project/src/main.ald:1:27]
 1 │ impl Iterator[Foo] { type item = Number }
   · ┬                         ┬
   · │                         ╰── expected an upper-case name
   · ╰── this impl declaration starts here
   ╰────
