crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__impl_path_member.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "impl Show::[User] {}"
---
alder::syntax

  × I was expecting a trait name after `::`
   ╭─[/project/src/main.ald:1:12]
 1 │ impl Show::[User] {}
   · ┬          ┬
   · │          ╰── expected a name here
   · ╰── this impl declaration starts here
   ╰────
