crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__impl_same_line.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "impl Iterator[Foo] { type Item = Number fn next() {} }"
---
alder::syntax

  × impl items must be separated by a line break
   ╭─[/project/src/main.ald:1:41]
 1 │ impl Iterator[Foo] { type Item = Number fn next() {} }
   · ┬                                       ┬
   · │                                       ╰── this item needs its own line
   · ╰── this impl declaration starts here
   ╰────
